# advent-of-code-2020

./: .gitignore  Cargo.toml  README.md  mkday.sh
01/: Cargo.toml  main.rs
02/: Cargo.toml  main.rs
03/: Cargo.toml  main.rs
04/: Cargo.toml  main.rs
05/: Cargo.toml  main.rs
06/: Cargo.toml  main.rs
07/: Cargo.toml  main.rs
08/: Cargo.toml  main.rs
09/: Cargo.toml  main.rs
10/: Cargo.toml  main.rs
11/: Cargo.toml  main.rs
12/: Cargo.toml  main.rs
13/: Cargo.toml  main.rs
14/: Cargo.toml  main.rs
15/: Cargo.toml  main.rs
16/: Cargo.toml  main.rs
17/: Cargo.toml  main.rs
18/: Cargo.toml  main.rs
19/: .#main.rs  Cargo.toml  main.rs
20/: Cargo.toml  main.rs
21/: Cargo.toml  main.rs
22/: Cargo.toml  main.rs
23/: Cargo.toml  main.rs
24/: Cargo.toml  main.rs
25/: Cargo.toml  main.rs
aoc/: Cargo.toml
aoc/examples/: astar.rs  grid.rs  hexgrid.rs  transforms.rs
aoc/src/: lib.rs
template/: Cargo.toml  main.rs
