[package]
name = 'aoc'
version = '0.0.1'
edition = '2018'

[dependencies]
num = "0.2.0"
serde_scan = "0.3.2"
modinverse = "0.1.1"
mod_exp = "1.0.1"
lazy_static = "1.4.0"
petgraph = "0.5.1"

[dependencies.pancurses]
version = "0.16"
features = ["win32"]

[dependencies.vecmath]
version = "1.0.0"

[[example]]
name = "grid"
path = "examples/grid.rs"
